chore: adding correct spacing to icon in menu-item

--- a/packages/application-shell/src/components/navbar/navbar-new/navbar.mod.css
+++ b/packages/application-shell/src/components/navbar/navbar-new/navbar.mod.css
@@ -198,8 +198,7 @@
 :global(.body__menu-open) .list-item .title {
   display: block;
   opacity: 1;
-  margin-left: var(--spacing-20);
-  /* stylelint-disable-next-line csstools/value-no-unknown-custom-properties */
+  margin-left: var(--spacing-25);
   color: var(--color-surface);
 }
 
